--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "dict_keys(['longitude', 'latitude', 'time', 'u100', 'v100'])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +107,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(26304, 1, 1)"
+       "('u100',\n",
+       " array([[1.19920014],\n",
+       "        [1.57312448],\n",
+       "        [1.1999525 ],\n",
+       "        ...,\n",
+       "        [1.53099216],\n",
+       "        [1.78378609],\n",
+       "        [2.29238339]]))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(a.items())[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(26304, 1)"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +160,7 @@
     {
      "data": {
       "text/plain": [
-       "(26304, 1, 1)"
+       "26304"
       ]
      },
      "execution_count": 24,
@@ -142,121 +169,214 @@
     }
    ],
    "source": [
-    "a['v100'].shape"
+    "len(list(a.items())[0][1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "len(list(a.items())[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['time', 'u100', 'v100'])"
+       "array([-3.38774517])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "a['v100'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01 00:00:00</td>\n",
+       "      <td>-3.387745165685549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-01 01:00:00</td>\n",
+       "      <td>-3.3271057486084805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-01 02:00:00</td>\n",
+       "      <td>-4.063085522995914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-01 03:00:00</td>\n",
+       "      <td>-4.451842333846161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-01 04:00:00</td>\n",
+       "      <td>-4.10877275504028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26299</th>\n",
+       "      <td>2020-12-31 19:00:00</td>\n",
+       "      <td>-5.925463236513548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26300</th>\n",
+       "      <td>2020-12-31 20:00:00</td>\n",
+       "      <td>-4.996766410593515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26301</th>\n",
+       "      <td>2020-12-31 21:00:00</td>\n",
+       "      <td>-3.8313266549890357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26302</th>\n",
+       "      <td>2020-12-31 22:00:00</td>\n",
+       "      <td>-3.0945162036553415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26303</th>\n",
+       "      <td>2020-12-31 23:00:00</td>\n",
+       "      <td>-2.70243668502005</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26304 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         0                    1\n",
+       "0      2018-01-01 00:00:00   -3.387745165685549\n",
+       "1      2018-01-01 01:00:00  -3.3271057486084805\n",
+       "2      2018-01-01 02:00:00   -4.063085522995914\n",
+       "3      2018-01-01 03:00:00   -4.451842333846161\n",
+       "4      2018-01-01 04:00:00    -4.10877275504028\n",
+       "...                    ...                  ...\n",
+       "26299  2020-12-31 19:00:00   -5.925463236513548\n",
+       "26300  2020-12-31 20:00:00   -4.996766410593515\n",
+       "26301  2020-12-31 21:00:00  -3.8313266549890357\n",
+       "26302  2020-12-31 22:00:00  -3.0945162036553415\n",
+       "26303  2020-12-31 23:00:00    -2.70243668502005\n",
+       "\n",
+       "[26304 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "output_df = pd.DataFrame(np.concatenate((a['time'], a['v100']),axis=1))\n",
+    "output_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['v100'].reshape(26304,-1).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "a.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({'time': array([[['2018-01-01 00:00:00']],\n",
-       "  \n",
-       "         [['2018-01-01 01:00:00']],\n",
-       "  \n",
-       "         [['2018-01-01 02:00:00']],\n",
-       "  \n",
-       "         ...,\n",
-       "  \n",
-       "         [['2021-07-26 19:00:00']],\n",
-       "  \n",
-       "         [['2021-07-26 20:00:00']],\n",
-       "  \n",
-       "         [['2021-07-26 21:00:00']]], dtype='<U19'),\n",
-       "  'u100': array([[[[ 1.19920014e+00]],\n",
-       "  \n",
-       "          [[-3.27670000e+04]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[ 1.57312448e+00]],\n",
-       "  \n",
-       "          [[-3.27670000e+04]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[ 1.19995250e+00]],\n",
-       "  \n",
-       "          [[-3.27670000e+04]]],\n",
-       "  \n",
-       "  \n",
-       "         ...,\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.27670000e+04]],\n",
-       "  \n",
-       "          [[-7.91341894e+00]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.27670000e+04]],\n",
-       "  \n",
-       "          [[-8.04207299e+00]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.27670000e+04]],\n",
-       "  \n",
-       "          [[-7.94276109e+00]]]]),\n",
-       "  'v100': array([[[[-3.38774517e+00]],\n",
-       "  \n",
-       "          [[-3.27670000e+04]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.32710575e+00]],\n",
-       "  \n",
-       "          [[-3.27670000e+04]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[-4.06308552e+00]],\n",
-       "  \n",
-       "          [[-3.27670000e+04]]],\n",
-       "  \n",
-       "  \n",
-       "         ...,\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.27670000e+04]],\n",
-       "  \n",
-       "          [[-5.50983394e-01]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.27670000e+04]],\n",
-       "  \n",
-       "          [[-4.91174654e-01]]],\n",
-       "  \n",
-       "  \n",
-       "         [[[-3.27670000e+04]],\n",
-       "  \n",
-       "          [[-5.63443548e-01]]]])},\n",
-       " {'latitude': array([34.24], dtype=float32),\n",
-       "  'longitude': array([127.09], dtype=float32)})"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
