--- a/main.ipynb
+++ b/main.ipynb
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import yaml\n",
+    "\n",
     "from datetime import datetime, timedelta\n",
     "from cftime import num2date, date2num\n",
     "\n",
@@ -44,15 +45,6 @@
     "    if nc_type_file.split(\".\")[-1] == 'nc':\n",
     "        datasetDict[nc_type_file] = netCDF4.Dataset(dataPath+nc_type_file,mode=\"r\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -89,6 +81,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -107,137 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('u100',\n",
-       " array([[1.19920014],\n",
-       "        [1.57312448],\n",
-       "        [1.1999525 ],\n",
-       "        ...,\n",
-       "        [1.53099216],\n",
-       "        [1.78378609],\n",
-       "        [2.29238339]]))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(a.items())[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(26304, 1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a['time'].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26304"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(list(a.items())[0][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
-   "source": [
-    "len(list(a.items())[0,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-3.38774517])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a['v100'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,93 +130,232 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>time</th>\n",
+       "      <th>u100</th>\n",
+       "      <th>v100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2018-01-01 00:00:00</td>\n",
+       "      <td>1.1992001371319785</td>\n",
        "      <td>-3.387745165685549</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2018-01-01 01:00:00</td>\n",
+       "      <td>1.5731244834276006</td>\n",
        "      <td>-3.3271057486084805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2018-01-01 02:00:00</td>\n",
+       "      <td>1.1999525000017885</td>\n",
        "      <td>-4.063085522995914</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2018-01-01 03:00:00</td>\n",
+       "      <td>1.0532417403888177</td>\n",
        "      <td>-4.451842333846161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2018-01-01 04:00:00</td>\n",
+       "      <td>1.3669770570996316</td>\n",
        "      <td>-4.10877275504028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26299</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2020-12-31 19:00:00</td>\n",
+       "      <td>2.157710433270052</td>\n",
        "      <td>-5.925463236513548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26300</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2020-12-31 20:00:00</td>\n",
+       "      <td>1.8891168887478451</td>\n",
        "      <td>-4.996766410593515</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26301</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2020-12-31 21:00:00</td>\n",
+       "      <td>1.5309921627182348</td>\n",
        "      <td>-3.8313266549890357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26302</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2020-12-31 22:00:00</td>\n",
+       "      <td>1.78378608697443</td>\n",
        "      <td>-3.0945162036553415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26303</th>\n",
+       "      <td>34.24</td>\n",
+       "      <td>127.09</td>\n",
        "      <td>2020-12-31 23:00:00</td>\n",
+       "      <td>2.2923833869660615</td>\n",
        "      <td>-2.70243668502005</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>26304 rows × 2 columns</p>\n",
+       "<p>26304 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         0                    1\n",
-       "0      2018-01-01 00:00:00   -3.387745165685549\n",
-       "1      2018-01-01 01:00:00  -3.3271057486084805\n",
-       "2      2018-01-01 02:00:00   -4.063085522995914\n",
-       "3      2018-01-01 03:00:00   -4.451842333846161\n",
-       "4      2018-01-01 04:00:00    -4.10877275504028\n",
-       "...                    ...                  ...\n",
-       "26299  2020-12-31 19:00:00   -5.925463236513548\n",
-       "26300  2020-12-31 20:00:00   -4.996766410593515\n",
-       "26301  2020-12-31 21:00:00  -3.8313266549890357\n",
-       "26302  2020-12-31 22:00:00  -3.0945162036553415\n",
-       "26303  2020-12-31 23:00:00    -2.70243668502005\n",
+       "      latitude longitude                 time                u100  \\\n",
+       "0        34.24    127.09  2018-01-01 00:00:00  1.1992001371319785   \n",
+       "1        34.24    127.09  2018-01-01 01:00:00  1.5731244834276006   \n",
+       "2        34.24    127.09  2018-01-01 02:00:00  1.1999525000017885   \n",
+       "3        34.24    127.09  2018-01-01 03:00:00  1.0532417403888177   \n",
+       "4        34.24    127.09  2018-01-01 04:00:00  1.3669770570996316   \n",
+       "...        ...       ...                  ...                 ...   \n",
+       "26299    34.24    127.09  2020-12-31 19:00:00   2.157710433270052   \n",
+       "26300    34.24    127.09  2020-12-31 20:00:00  1.8891168887478451   \n",
+       "26301    34.24    127.09  2020-12-31 21:00:00  1.5309921627182348   \n",
+       "26302    34.24    127.09  2020-12-31 22:00:00    1.78378608697443   \n",
+       "26303    34.24    127.09  2020-12-31 23:00:00  2.2923833869660615   \n",
        "\n",
-       "[26304 rows x 2 columns]"
+       "                      v100  \n",
+       "0       -3.387745165685549  \n",
+       "1      -3.3271057486084805  \n",
+       "2       -4.063085522995914  \n",
+       "3       -4.451842333846161  \n",
+       "4        -4.10877275504028  \n",
+       "...                    ...  \n",
+       "26299   -5.925463236513548  \n",
+       "26300   -4.996766410593515  \n",
+       "26301  -3.8313266549890357  \n",
+       "26302  -3.0945162036553415  \n",
+       "26303    -2.70243668502005  \n",
+       "\n",
+       "[26304 rows x 5 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "conversion_module.dict_to_dataframe(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['time'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_  = b['latitude'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(a.items())[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['time'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(list(a.items())[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(list(a.items())[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['v100'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "output_df = pd.DataFrame(np.concatenate((a['time'], a['v100']),axis=1))\n",
@@ -837,7 +845,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -851,7 +859,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
