--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "\n",
     "dataPath = \"./data/\"\n",
     "# dataPath = \"./raw_data/Maebong_and_Moonam/\"\n",
@@ -81,13 +80,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -108,166 +100,111 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "returned_df = conversion_module.dict_to_dataframe(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>time</th>\n",
-       "      <th>u100</th>\n",
-       "      <th>v100</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 00:00:00</td>\n",
-       "      <td>1.1992001371319785</td>\n",
-       "      <td>-3.387745165685549</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 01:00:00</td>\n",
-       "      <td>1.5731244834276006</td>\n",
-       "      <td>-3.3271057486084805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 02:00:00</td>\n",
-       "      <td>1.1999525000017885</td>\n",
-       "      <td>-4.063085522995914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 03:00:00</td>\n",
-       "      <td>1.0532417403888177</td>\n",
-       "      <td>-4.451842333846161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2018-01-01 04:00:00</td>\n",
-       "      <td>1.3669770570996316</td>\n",
-       "      <td>-4.10877275504028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26299</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 19:00:00</td>\n",
-       "      <td>2.157710433270052</td>\n",
-       "      <td>-5.925463236513548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26300</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 20:00:00</td>\n",
-       "      <td>1.8891168887478451</td>\n",
-       "      <td>-4.996766410593515</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26301</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 21:00:00</td>\n",
-       "      <td>1.5309921627182348</td>\n",
-       "      <td>-3.8313266549890357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26302</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 22:00:00</td>\n",
-       "      <td>1.78378608697443</td>\n",
-       "      <td>-3.0945162036553415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26303</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>127.09</td>\n",
-       "      <td>2020-12-31 23:00:00</td>\n",
-       "      <td>2.2923833869660615</td>\n",
-       "      <td>-2.70243668502005</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>26304 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      latitude longitude                 time                u100  \\\n",
-       "0        34.24    127.09  2018-01-01 00:00:00  1.1992001371319785   \n",
-       "1        34.24    127.09  2018-01-01 01:00:00  1.5731244834276006   \n",
-       "2        34.24    127.09  2018-01-01 02:00:00  1.1999525000017885   \n",
-       "3        34.24    127.09  2018-01-01 03:00:00  1.0532417403888177   \n",
-       "4        34.24    127.09  2018-01-01 04:00:00  1.3669770570996316   \n",
-       "...        ...       ...                  ...                 ...   \n",
-       "26299    34.24    127.09  2020-12-31 19:00:00   2.157710433270052   \n",
-       "26300    34.24    127.09  2020-12-31 20:00:00  1.8891168887478451   \n",
-       "26301    34.24    127.09  2020-12-31 21:00:00  1.5309921627182348   \n",
-       "26302    34.24    127.09  2020-12-31 22:00:00    1.78378608697443   \n",
-       "26303    34.24    127.09  2020-12-31 23:00:00  2.2923833869660615   \n",
-       "\n",
-       "                      v100  \n",
-       "0       -3.387745165685549  \n",
-       "1      -3.3271057486084805  \n",
-       "2       -4.063085522995914  \n",
-       "3       -4.451842333846161  \n",
-       "4        -4.10877275504028  \n",
-       "...                    ...  \n",
-       "26299   -5.925463236513548  \n",
-       "26300   -4.996766410593515  \n",
-       "26301  -3.8313266549890357  \n",
-       "26302  -3.0945162036553415  \n",
-       "26303    -2.70243668502005  \n",
-       "\n",
-       "[26304 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'returned_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-de6a92d27012>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mreturned_value\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconversion_module\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeasure_wind_info\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreturned_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Documents\\ERA05_extractor\\utils\\conversion_module.py\u001b[0m in \u001b[0;36mmeasure_wind_info\u001b[1;34m(pandas_df)\u001b[0m\n\u001b[0;32m    103\u001b[0m         \u001b[0mcolumn_1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwind_calculator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mu_column\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mwind_calculator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mv_column\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'_'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'wind_speed'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 105\u001b[1;33m         \u001b[0mtmp_array\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturned_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwind_calculator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalculate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    106\u001b[0m         \u001b[0mtmp_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_array\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mcolumn_0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumn_1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    107\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'returned_df' is not defined"
+     ]
     }
    ],
    "source": [
-    "conversion_module.dict_to_dataframe(a, b)"
+    "returned_value = conversion_module.measure_wind_info(returned_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "returned_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wind_calculator = WindInfoCalculator(u_column = 'u100', v_column = 'v100')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_0 = wind_calculator.u_column + '_' + wind_calculator.v_column + '_' + 'wind_direction'\n",
+    "column_1 = wind_calculator.u_column + '_' + wind_calculator.v_column + '_' + 'wind_speed'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_array = returned_df.apply(wind_calculator.calculate, axis=1)\n",
+    "tmp_df = pd.DataFrame(tmp_array.tolist(), columns = [column_0, column_1])\n",
+    "\n",
+    "df_list = []\n",
+    "df_list.append(tmp_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(a.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listofTwo = output_df.apply(recordFunction, axis=1)\n",
+    "\n",
+    "# type(listofTwo.tolist()[0][0])\n",
+    "\n",
+    "# listofTwo.tolist()[0][0].to_compact\n",
+    "\n",
+    "a = pd.DataFrame(listofTwo.tolist(),columns =['direction','wind_speed'])\n",
+    "\n",
+    "column_name.append('wind_direction')\n",
+    "column_name.append('wind_speed')\n",
+    "column_name"
    ]
   },
   {
@@ -711,13 +648,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from metpy.calc import wind_speed, wind_direction\n",
-    "from metpy.units import units\n",
+    "# from metpy.calc import wind_speed, wind_direction\n",
+    "# from metpy.units import units\n",
     "\n",
-    "def recordFunction(record):\n",
-    "    u = float(record['u10']) * units.meter / units.second\n",
-    "    v = float(record['v10']) * units.meter / units.second\n",
-    "    return [wind_direction(u,v), wind_speed(u,v)]"
+    "# def recordFunction(record):\n",
+    "#     u = float(record['u10']) * units.meter / units.second\n",
+    "#     v = float(record['v10']) * units.meter / units.second\n",
+    "#     return [wind_direction(u,v), wind_speed(u,v)]"
    ]
   },
   {
