--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,25 @@
     "for idx,nc_type_file in enumerate(files):\n",
     "    if nc_type_file.split(\".\")[-1] == 'nc':\n",
     "        datasetDict[nc_type_file] = netCDF4.Dataset(dataPath+nc_type_file,mode=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for fname, netCDF4 in list(datasetDict.items()):\n",
+    "\n",
+    "    info_dict, meta_dict, desc_dict = conversion_module.netCDF4_to_CSV(netCDF4)\n",
+    "    data_df = conversion_module.dict_to_dataframe(info_dict, meta_dict)\n",
+    "    data_df = conversion_module.measure_wind_info(data_df)\n",
+    "\n",
+    "    tmp_fname = fname.split('.')[-2] + '(located_in_' + str(meta_dict['latitude'][0])+\"lat \"+str(meta_dict['longitude'][0])+\"lon\"+').csv'\n",
+    "    conversion_module.save_df(data_df, cfg['project_title'], tmp_fname)\n",
+    "\n",
+    "    del info_dict\n",
+    "    del meta_dict"
    ]
   },
   {
@@ -73,74 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in output_dataset.variables.keys():\n",
-    "    print(\"\")\n",
-    "    print(output_dataset[i])\n",
-    "    print(\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dataset['latitude']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dataset['p140121'][:].data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(output_dataset['time'].get_dims())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dataset['p140121'].long_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "array_format = np.array(output_dataset['v100']).T.reshape([4344,2,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "array_format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "info_dict, meta_dict = conversion_module.netCDF4_to_CSV(output_dataset)\n",
+    "info_dict, meta_dict, desc_dict = conversion_module.netCDF4_to_CSV(output_dataset)\n",
     "data_df = conversion_module.dict_to_dataframe(info_dict, meta_dict)\n",
     "data_df = conversion_module.measure_wind_info(data_df)\n",
     "\n",
@@ -161,11 +113,89 @@
    "source": [
     "data_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'latitude': 'latitude',\n",
+       " 'longitude': 'longitude',\n",
+       " 'time': 'time',\n",
+       " 'u100': '100 metre U wind component',\n",
+       " 'v100': '100 metre V wind component',\n",
+       " 'u10': '10 metre U wind component',\n",
+       " 'v10': '10 metre V wind component',\n",
+       " 'mdww': 'Mean direction of wind waves',\n",
+       " 'mpww': 'Mean period of wind waves',\n",
+       " 'mwd': 'Mean wave direction',\n",
+       " 'p140122': 'Mean wave direction of first swell partition',\n",
+       " 'mwp': 'Mean wave period',\n",
+       " 'mp1': 'Mean wave period based on first moment',\n",
+       " 'wmb': 'Model bathymetry',\n",
+       " 'dwi': '10 metre wind direction',\n",
+       " 'pp1d': 'Peak wave period',\n",
+       " 'swh': 'Significant height of combined wind waves and swell',\n",
+       " 'shww': 'Significant height of wind waves',\n",
+       " 'p140121': 'Significant wave height of first swell partition',\n",
+       " 'p140124': 'Significant wave height of second swell partition',\n",
+       " 'p140127': 'Significant wave height of third swell partition'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "desc_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from metpy.calc import wind_speed, wind_direction #it \n",
+    "from metpy.units import units\n",
+    "\n",
+    "u = float(-2.83) * units.meter / units.second\n",
+    "v = float(-2.83) * units.meter / units.second"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value(wind_direction(u,v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dataset['v100'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
